[package]
name = "rvm"
description = "Educational Virtual Machine written in Rust."
version = "0.1.0-dev.1"
license = "Unlicense"
authors = ["Christian Mayer <christian@fox21.at>"]
homepage = "https://github.com/TheFox/rvm"
documentation = "https://github.com/TheFox/rvm"
repository = "https://github.com/TheFox/rvm"
keywords = ["vm", "virtual", "machine", "emulator", "education"]
categories = ["command-line-utilities", "emulators", "parsing"]
edition = "2018"
default-run = "rvm"

[build-dependencies]
chrono = "0.4"

[dependencies]

[dependencies.rvm_lib]
path = "lib"
version = "0.1.0-dev"

[workspace]
members = [
    "lib",
]

[profile.release]
panic = 'abort'

[[bin]]
name = "rvm"
path = "src/main.rs"
